--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Prueba</h1>
     <h2>Trabajando con Ramas</h2>
+    <h3>Cambio en segunda rama</h3>
     <script src="app.js"></script>
 </body>
 </html>
